Add user resource roles
