# swagger_server/models/__init__.py
@@ -53,6 +53,8 @@ from swagger_server.models.site_update import SiteUpdate
 from swagger_server.models.user_deletion_data import UserDeletionData
 from swagger_server.models.user_domain_role import UserDomainRole
 from swagger_server.models.user_domain_role_create import UserDomainRoleCreate
+from swagger_server.models.user_resource_role import UserResourceRole
+from swagger_server.models.user_resource_role_create import UserResourceRoleCreate
 from swagger_server.models.user_site_role import UserSiteRole
 from swagger_server.models.user_site_role_create import UserSiteRoleCreate
 from swagger_server.models.user_site_role_labels_aggregated import UserSiteRoleLabelsAggregated
