# swagger_server/models/user_resource_role_create.py
@@ -1,0 +1,122 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class UserResourceRoleCreate(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, user_id: str=None, resource_id: int=None, role_id: int=None):  # noqa: E501
+        """UserResourceRoleCreate - a model defined in Swagger
+
+        :param user_id: The user_id of this UserResourceRoleCreate.  # noqa: E501
+        :type user_id: str
+        :param resource_id: The resource_id of this UserResourceRoleCreate.  # noqa: E501
+        :type resource_id: int
+        :param role_id: The role_id of this UserResourceRoleCreate.  # noqa: E501
+        :type role_id: int
+        """
+        self.swagger_types = {
+            'user_id': str,
+            'resource_id': int,
+            'role_id': int
+        }
+
+        self.attribute_map = {
+            'user_id': 'user_id',
+            'resource_id': 'resource_id',
+            'role_id': 'role_id'
+        }
+
+        self._user_id = user_id
+        self._resource_id = resource_id
+        self._role_id = role_id
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'UserResourceRoleCreate':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The user_resource_role_create of this UserResourceRoleCreate.  # noqa: E501
+        :rtype: UserResourceRoleCreate
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def user_id(self) -> str:
+        """Gets the user_id of this UserResourceRoleCreate.
+
+
+        :return: The user_id of this UserResourceRoleCreate.
+        :rtype: str
+        """
+        return self._user_id
+
+    @user_id.setter
+    def user_id(self, user_id: str):
+        """Sets the user_id of this UserResourceRoleCreate.
+
+
+        :param user_id: The user_id of this UserResourceRoleCreate.
+        :type user_id: str
+        """
+        if user_id is None:
+            raise ValueError("Invalid value for `user_id`, must not be `None`")  # noqa: E501
+
+        self._user_id = user_id
+
+    @property
+    def resource_id(self) -> int:
+        """Gets the resource_id of this UserResourceRoleCreate.
+
+
+        :return: The resource_id of this UserResourceRoleCreate.
+        :rtype: int
+        """
+        return self._resource_id
+
+    @resource_id.setter
+    def resource_id(self, resource_id: int):
+        """Sets the resource_id of this UserResourceRoleCreate.
+
+
+        :param resource_id: The resource_id of this UserResourceRoleCreate.
+        :type resource_id: int
+        """
+        if resource_id is None:
+            raise ValueError("Invalid value for `resource_id`, must not be `None`")  # noqa: E501
+
+        self._resource_id = resource_id
+
+    @property
+    def role_id(self) -> int:
+        """Gets the role_id of this UserResourceRoleCreate.
+
+
+        :return: The role_id of this UserResourceRoleCreate.
+        :rtype: int
+        """
+        return self._role_id
+
+    @role_id.setter
+    def role_id(self, role_id: int):
+        """Sets the role_id of this UserResourceRoleCreate.
+
+
+        :param role_id: The role_id of this UserResourceRoleCreate.
+        :type role_id: int
+        """
+        if role_id is None:
+            raise ValueError("Invalid value for `role_id`, must not be `None`")  # noqa: E501
+
+        self._role_id = role_id
